@@ -14,47 +14,49 @@ exclude = '''
 )/
 '''
 
-
-[tool.poetry]
-name = "FastFlix"
-version = "5.4.0"
+[project]
+name = "fastflix"
 description = "GUI Encoder"
-license = "MIT"
-authors = ["Chris Griffith <chris@cdgriffith.com>", ]
-include = ["fastflix", "AUTHORS", "CHANGES", "LICENSE", "fastflix/CHANGES"]
+authors = [{ name = "Chris Griffith", email = "chris@cdgriffith.com" }]
 readme = "README.md"
-homepage = "https://fastflix.org"
-repository = "https://github.com/cdgriffith/FastFlix"
-build = "build.py"
+#url = "https://fastflix.org"
+#download_url = "https://github.com/cdgriffith/FastFlix/releases"
+requires-python = ">=3.11,<3.12"
+dynamic = ["version"]
+dependencies = [
+    "appdirs~=1.4",
+    "chardet>=5.1.0,<5.2.0",
+    "colorama>=0.4,<1.0",
+    "coloredlogs>=15.0,<16.0",
+    "iso639-lang==0.0.9",
+    "mistune>=2.0,<3.0",
+    "pathvalidate>=2.4,<3.0",
+    "psutil>=5.9,<6.0",
+    "pydantic>=1.9,<2.0",
+    "pyside6>=6.4.2,<7.0",
+    "python-box[all]>=6.0,<7.0",
+    "requests>=2.28,<3.0",
+    "reusables>=0.9.6,<0.10.0",
+]
 
-[tool.poetry.dependencies]
-python = ">=3.11,<3.12"
-appdirs = "~=1.4"
-chardet = ">=5.1.0,<5.2.0"
-colorama = ">=0.4,<1.0"
-coloredlogs = ">=15.0,<16.0"
-iso639-lang = "0.0.9"
-mistune = ">=2.0,<3.0"
-pathvalidate = ">=2.4,<3.0"
-psutil = ">=5.9,<6.0"
-pydantic = ">=1.9,<2.0"
-pyside6 = ">=6.4.2,<7.0"
-python-box = {version = ">=6.0,<7.0", extras = ["all"]}
-requests = ">=2.28,<3.0"
-reusables = ">=0.9.6,<0.10.0"
-pypiwin32 = {version = ">=223", markers = "sys_platform == 'win32'"}
+[project.optional-dependencies]
+test = [
+    "pytest>=7.3.1",
+]
 
-[tool.poetry.group.dev]
-optional = true
-
-[tool.poetry.group.dev.dependencies]
-wheel = ">=0.38.4"
-typing_extensions = ">=4.4"
-pyinstaller = ">=5.7"
-pytest = ">=7.2"
-types-requests = ">=2.28"
-types-setuptools = ">=65.7"
-pre-commit = "^3.0.3"
-
-[tool.poetry.scripts]
+[project.scripts]
 fastflix = "fastflix.__main__:start_fastflix"
+
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["fastflix*"]
+
+[tool.setuptools.package-data]
+"*" = ['*.yaml', '*.ico', '*.svg', '*.png']
+
+[build-system]
+requires = ["setuptools", "setuptools_scm[toml]>=6.2", "wheel"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools.dynamic]
+version = { attr = "fastflix.version.__version__" }
