@@ -1,3 +1,0 @@
-pytest
-types-requests
-types-setuptools
